--- a/style.css
+++ b/style.css
@@ -127,3 +127,12 @@ button:active {
     box-shadow: 0 0 15px rgba(255, 0, 255, 0.3);
     margin-top: 20px;
 }
+
+
+#storyBtn:hover {
+    background: #ff00ff;
+    color: #1a252f;
+    box-shadow: 0 0 25px #ff00ff, 0 0 40px rgba(255, 0, 255, 0.6);
+}
+
+
